force-app/main/default/objects/maps__DebugLog__c/maps__DebugLog__c.object-meta.xml
<CustomObject>
    <label>Maps Debug Log</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>