force-app/main/default/objects/maps__DebugLog__c/fields/maps__Account__c.field-meta.xml
<CustomField>
    <fullName>maps__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Maps Auto-Assignment Logs</relationshipLabel>
    <relationshipName>AccountAutoAssignmentLogs</relationshipName>
    <type>Lookup</type>
</CustomField>