force-app/main/default/objects/maps__DebugLog__c/fields/maps__AdvRouteTemplate__c.field-meta.xml
<CustomField>
    <fullName>maps__AdvRouteTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the Advanced Route template the error is related to</description>
    <label>Maps Advanced Route Template</label>
    <referenceTo>maps__AdvRouteTemplate__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Debugs</relationshipLabel>
    <relationshipName>AdvRouteDebugs</relationshipName>
    <type>Lookup</type>
</CustomField>