force-app/main/default/objects/maps__DebugLog__c/fields/maps__AdvRouteTemplateUser__c.field-meta.xml
<CustomField>
    <fullName>maps__AdvRouteTemplateUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the Advanced Route template user the error is related to</description>
    <label>Maps Advanced Route Template User</label>
    <referenceTo>maps__AdvRouteTemplateUser__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Debugs</relationshipLabel>
    <relationshipName>AdvRouteDebugs</relationshipName>
    <type>Lookup</type>
</CustomField>