force-app/main/default/objects/maps__DebugLog__c/fields/maps__Body__c.field-meta.xml
<CustomField>
    <fullName>maps__Body__c</fullName>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>