force-app/main/default/objects/maps__DebugLog__c/fields/maps__Details__c.field-meta.xml
<CustomField>
    <fullName>maps__Details__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>