force-app/main/default/objects/maps__DebugLog__c/fields/maps__ErrorBody__c.field-meta.xml
<CustomField>
    <fullName>maps__ErrorBody__c</fullName>
    <description>This holds information about the error and hopefully some way of identifying where the error occurred.</description>
    <label>Error Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>