force-app/main/default/objects/maps__DebugLog__c/fields/maps__ErrorMessages__c.field-meta.xml
<CustomField>
    <fullName>maps__ErrorMessages__c</fullName>
    <description>This will hold messages returned from the routing services</description>
    <label>Error Messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>