force-app/main/default/objects/maps__DebugLog__c/fields/maps__GeocodeSuccessful__c.field-meta.xml
<CustomField>
    <fullName>maps__GeocodeSuccessful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Geocode Successful</label>
    <type>Checkbox</type>
</CustomField>