force-app/main/default/objects/maps__DebugLog__c/fields/maps__Plan__c.field-meta.xml
<CustomField>
    <fullName>maps__Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maps Assignment Plan</label>
    <referenceTo>maps__AssignmentPlan__c</referenceTo>
    <relationshipLabel>Maps Auto-Assignment Logs</relationshipLabel>
    <relationshipName>PlanLogs</relationshipName>
    <type>Lookup</type>
</CustomField>