force-app/main/default/objects/maps__DebugLog__c/fields/maps__ProcessingDate__c.field-meta.xml
<CustomField>
    <fullName>maps__ProcessingDate__c</fullName>
    <description>This is the date that was processing for the template user when the error occurred</description>
    <label>Processing Date</label>
    <type>Date</type>
</CustomField>