force-app/main/default/objects/maps__DebugLog__c/fields/maps__RecordId__c.field-meta.xml
<CustomField>
    <fullName>maps__RecordId__c</fullName>
    <description>This is the id of a related record that could help in resolving the error</description>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>