force-app/main/default/objects/maps__DebugLog__c/fields/maps__Severity__c.field-meta.xml
<CustomField>
    <fullName>maps__Severity__c</fullName>
    <description>This tells us how critical the error is</description>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FATAL</fullName>
            </value>
            <value>
                <fullName>WARNING</fullName>
            </value>
            <value>
                <fullName>MESSAGE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>